# curtis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: platforms.cmake
dependencies/: CMakeLists.txt
dependencies/boost_lockfree/: CMakeLists.txt
dependencies/visualizer/: CMakeLists.txt
dependencies/visualizer/include/visualizer/: Attributes.h  Constants.h  Position.h  Shape.h  Uniforms.h  Utility.h  Vbo.h  Visualizer.h  Waveform.h  ZeroX.h
dependencies/visualizer/resource/: frag.glsl  vertex.glsl
dependencies/visualizer/source/: Attribute.cpp  Uniforms.cpp  Vbo.cpp  Visualizer.cpp  Waveform.cpp  ZeroX.cpp
dependencies/visualizer/test/: CMakeLists.txt
dependencies/visualizer/test/include/: DummyDataProvider.h  MainComponent.h
dependencies/visualizer/test/source/: DummyDataProvider.cpp  Main.cpp  MainComponent.cpp
doc/: LICENSE
engine/: CMakeLists.txt
engine/include/engine/: AdditiveProcessor.h  Constants.h  DelayProcessor.h  Engine.h  EngineManager.h  Factory.h  HoldProcessor.h  IAdditiveProcessor.h  IDelayProcessor.h  IEngine.h  IEngineManager.h  IFactory.h  IHoldProcessor.h  IParameterSourceSet.h  IPhasorProcessor.h  IProcessor.h  IVisualizationCache.h  IVisualizationDataProvider.h  IXFaderProcessor.h  IZeroXProcessor.h  ParameterSpec.h  PhasorProcessor.h  Preset.h  RingBuffer.h  SampleCapacitor.h  Utils.h  Validator.h  VisualizationCache.h  VisualizationData.h  XFaderProcessor.h  ZeroXProcessor.h
engine/mock/: CMakeLists.txt
engine/mock/include/engine/: AdditiveProcessorMock.h  DelayProcessorMock.h  EngineManagerMock.h  EngineMock.h  FactoryMock.h  HoldProcessorMock.h  ParameterSetterMock.h  ParameterStateSourceMock.h  ParameterSyncMock.h  PhasorProcessorMock.h  VisualizationCacheMock.h  XFaderProcessorMock.h  ZeroXProcessorMock.h
engine/source/: AdditiveProcessor.cpp  Buffer.cpp  DelayProcessor.cpp  Engine.cpp  EngineManager.cpp  Factory.cpp  HoldProcessor.cpp  ParameterSpecSet.cpp  ParameterSync.cpp  PhasorProcessor.cpp  Preset.cpp  RingBuffer.cpp  SampleCapacitor.cpp  Validator.cpp  VisualizationCache.cpp  XFaderProcessor.cpp  ZeroXProcessor.cpp
engine/test/: CMakeLists.txt
engine/test/source/: BufferTestCase.cpp  EngineManagerTestCase.cpp  EngineTestCase.cpp  FactoryTestCase.cpp  MessageTestCase.cpp  ParameterSpecSetTestCase.cpp  ParameterSpecTestCase.cpp  ParameterSyncTestCase.cpp  RingBufferTestCase.cpp  SampleCapacitorTestCase.cpp  UtilsTestCase.cpp  ValidatorTestCase.cpp  VisualizationCacheTestCase.cpp  VisualizationDataTestCase.cpp
include/: Buffer.h  Consts.h  Engine.h  EngineManager.h  GlissonPresenter.h  IEngine.h  IParameterSetter.h  IParameterSource.h  IParameterSourceSet.h  IParameterSync.h  LinePresenter.h  LineVisibilityResponder.h  MainComponent.h  Message.h  ParameterSource.h  ParameterSourceSet.h  ParameterSpec.h  ParameterSpecSet.h  ParameterSync.h  ParameterSyncSet.h  PluginEditor.h  PluginProcessor.h  Preset.h  PresetManager.h  StateSync.h  TogglePresenter.h  Validator.h  VisualizationDataCompressor.h
setup/Mac/: buildSetup.sh  distribution.plist
setup/Mac/resources/: gpl-3.0.rtf
setup/Win/: Installer.sln
setup/Win/sources/: Product.wxs  curtisVST3.wxs  installer.wixproj  trevorVST3.wxs
source/: Engine.cpp  EngineManager.cpp  GlissonPresenter.cpp  MainComponent.cpp  ParameterSource.cpp  ParameterSpecSet.cpp  ParameterSync.cpp  PluginEditor.cpp  PluginProcessor.cpp  Preset.cpp  PresetManager.cpp  StateSync.cpp  TogglePresenter.cpp  VisualizationDataCompressor.cpp
